--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.6.0",
+    "@nuxt/fonts": "^0.10.2",
+    "@nuxtjs/html-validator": "^1.8.2",
+    "@unocss/nuxt": "^0.63.6",
+    "@unocss/reset": "^0.63.6",
     "@vueuse/nuxt": "^11.1.0",
     "duckdb": "^1.1.1",
     "nuxt": "^3.13.2",
     "reka-ui": "^1.0.0-alpha.1",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3",
+    "unocss": "^0.63.6",
+    "unocss-preset-radix": "^2.5.5"
   }
 }
