--- a/package.json
+++ b/package.json
@@ -13,14 +13,24 @@
     "@nuxt/eslint": "^0.6.0",
     "@nuxt/fonts": "^0.10.2",
     "@nuxtjs/html-validator": "^1.8.2",
+    "@pinia/colada": "^0.11.1",
+    "@pinia/colada-nuxt": "^0.0.2",
+    "@pinia/nuxt": "^0.7.0",
     "@unocss/nuxt": "^0.63.6",
     "@unocss/reset": "^0.63.6",
     "@vueuse/nuxt": "^11.1.0",
     "duckdb": "^1.1.1",
+    "h3": "^1.13.0",
     "nuxt": "^3.13.2",
+    "nuxt-auth-utils": "^0.5.1",
+    "pinia": "^2.2.6",
     "reka-ui": "^1.0.0-alpha.1",
+    "valibot": "^0.42.1",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "overrides": {
+    "vue": "latest"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
