--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@hebilicious/vue-query-nuxt": "^0.3.0",
     "@nuxt/eslint": "^0.6.0",
     "@nuxt/fonts": "^0.10.2",
     "@nuxtjs/html-validator": "^1.8.2",
-    "@pinia/colada": "^0.11.1",
-    "@pinia/colada-nuxt": "^0.0.2",
-    "@pinia/nuxt": "^0.7.0",
+    "@tanstack/vue-query": "^5.59.17",
     "@unocss/nuxt": "^0.63.6",
     "@unocss/reset": "^0.63.6",
     "@vueuse/nuxt": "^11.1.0",
@@ -23,7 +22,6 @@
     "h3": "^1.13.0",
     "nuxt": "^3.13.2",
     "nuxt-auth-utils": "^0.5.1",
-    "pinia": "^2.2.6",
     "reka-ui": "^1.0.0-alpha.1",
     "valibot": "^0.42.1",
     "vue": "latest",
